Made little changes according to application
